[gd_scene load_steps=3 format=3 uid="uid://hjrp2hiddsfs"]

[ext_resource type="Script" uid="uid://ck4g0v1t48kr5" path="res://Menus/Game/Action/choose_cardinal_direction.gd" id="1_chxs2"]
[ext_resource type="Texture2D" uid="uid://v0bg4506l52c" path="res://assets/right_arrow.svg" id="1_tgd2x"]

[node name="ChooseCardinalDirection" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chxs2")

[node name="East" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -31.0
offset_right = 103.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("1_tgd2x")

[node name="West" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 30.0
offset_right = 46.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.1415927
icon = ExtResource("1_tgd2x")

[node name="South" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 30.0
offset_right = 105.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
icon = ExtResource("1_tgd2x")

[node name="North" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -30.0
offset_right = 44.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5707964
icon = ExtResource("1_tgd2x")

[connection signal="pressed" from="East" to="." method="_on_east_pressed"]
[connection signal="pressed" from="West" to="." method="_on_west_pressed"]
[connection signal="pressed" from="South" to="." method="_on_south_pressed"]
[connection signal="pressed" from="North" to="." method="_on_north_pressed"]
